--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="card-insights">
             <ion-icon name="analytics-outline"></ion-icon>
             <h5 class="card-title">Análise de Risco</h5>
-            <p class="card-text">Receive tailored insights and recommendations based on your financial history and goals. Fint helps you make smarter decisions by providing personalized financial advice.</p>
+            <p class="card-text">Receba insights e recomendações personalizadas com base em seu histórico financeiro e metas. A Fint ajuda você a tomar decisões mais inteligentes, fornecendo aconselhamento financeiro personalizado.</p>
           </div>
         </div>
         
@@ -71,39 +71,40 @@
           <div class="card-financial-data">
             <ion-icon name="stopwatch-outline"></ion-icon>
             <h5 class="card-title">Real Time Financial Data</h5>
-            <p class="card-text">Analise de risco para clientes e empresas para identificar riscos e proteger os seus investimentos.</p>
+            <p class="card-text">Acesse dados financeiros atualizados de todas as suas contas em um só lugar. Mantenha-se informado sobre seus saldos, transações e investimentos, garantindo que você esteja sempre no controle.</p>
           </div>
         </div>
 
         <div class="card">
           <div class="card-investiment">
             <ion-icon name="wallet-outline"></ion-icon>
-            <h5 class="card-title">Investment Portfolio Analysis</h5>
-            <p class="card-text">Analise de risco para clientes e empresas para identificar riscos e proteger os seus investimentos.</p>
+            <h5 class="card-title">Análise de Carteira de Investimentos</h5>
+            <p class="card-text">Aprofunde-se em seus investimentos com a análise de portfólio da Fint. Avalie o desempenho dos ativos, diversifique suas participações e tome decisões de investimento baseadas em dados.</p>
           </div>
         </div>
 
         <div class="card">
           <div class="card-goal-tracking">
             <ion-icon name="checkmark-outline"></ion-icon>
-            <h5 class="card-title">Goal Tracking</h5>
-            <p class="card-text">Analise de risco para clientes e empresas para identificar riscos e proteger os seus investimentos.</p>
+            <h5 class="card-title">Acompanhamento de Metas</h5>
+            <p class="card-text">Estabeleça metas financeiras, desde poupar para férias até o planejamento da aposentadoria, e acompanhe seu progresso. Fint ajuda você a se manter motivado e no caminho certo para alcançar seus objetivos.</p>
           </div>
         </div>
 
         <div class="card">
           <div class="card-accessibility">
             <ion-icon name="cash-outline"></ion-icon>
-            <h5 class="card-title">Mobile Accessibility</h5>
-            <p class="card-text">Analise de risco para clientes e empresas para identificar riscos e proteger os seus investimentos.</p>
+            <h5 class="card-title">Acessibilidade</h5>
+            <p class="card-text">Acesse o Fint a qualquer hora, em qualquer lugar com nosso aplicativo móvel. Mantenha-se conectado com suas finanças em qualquer lugar e tome decisões com confiança.</p>
           </div>
         </div>
 
         <div class="card">
           <div class="card-personalized">
             <ion-icon name="build-outline"></ion-icon>
-            <h5 class="card-title">Personalized Insights</h5>
-            <p class="card-text">Analise de risco para clientes e empresas para identificar riscos e proteger os seus investimentos.</p>
+            <h5 class="card-title">Insights personaizados</h5>
+            <p class="card-text">Receba insights e recomendações personalizadas com base em seu histórico financeiro e metas. A Fint ajuda você a tomar decisões mais inteligentes, fornecendo aconselhamento financeiro personalizado.
+            </p>
           </div>
         </div>
 
