add footer and background file

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>
           <ol><a href="#">Home</a></ol>
           <ol><a href="#">About</a></ol>
-          <ol><a href="#">Features</a></ol>
+          <ol><a href="#features">Features</a></ol>
           <ol><a href="#">Contact Us</a></ol>
         </li>
         <div class="buttonsHeader">
@@ -52,7 +52,7 @@
 
     <img src="./assets/ixqhfKSfJy41m88g91Uz7Pbqv5c.avif" alt="" id="imgDetails">
 
-    <div class="featuresClass">
+    <div class="featuresClass" id="features">
       <strong>Features</strong>
       <h2>Análises que parecem do futuro</h2>
       <p>Análises poderosas de produtos e crescimento de autoatendimento para ajudá-lo a converter, engajar e reter mais usuários. Conta com a confiança de mais de 4.000 startups.</p>
@@ -111,7 +111,15 @@
 
     </section>
 
-    
+    <section class="getStarted">
+      <strong>It’s easy to get started !</strong>
+      <p>Ger the app to explore the world of premium finance products fast transaction to help your business grow</p>
+      <button>Get Started</button>
+    </section>
+
+    <footer>
+      <span>© 2024 FINTECH All rights reserved</span>
+    </footer>
   </div>
   
 
