add responsive design

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
             <h5 class="card-title">Insights personaizados</h5>
             <p class="card-text">Receba insights e recomendações personalizadas com base em seu histórico financeiro e metas. A Fint ajuda você a tomar decisões mais inteligentes, fornecendo aconselhamento financeiro personalizado.
             </p>
+            <button id="buttonLerMais">Ler mais</button>
           </div>
         </div>
 
@@ -117,13 +118,41 @@
       <button>Get Started</button>
     </section>
 
+    <section class="informationSection">
+
+      <div class="socialMedia">
+        <strong>Siga-nos</strong>
+        <div class="socialMediaLinks">
+          <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+          <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+          <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
+          <a href=""><ion-icon name="logo-github"></ion-icon></a>
+        </div>
+      </div>
+
+        <form action="">
+          <h2>Entre em contato</h2>
+          <p>Acompanhamento ao cliente 24h</p>
+
+          <div class="inputForm">
+              <label for="email">Email: </label>
+              <input id="email" type="email" name="email" placeholder="Your email address" required>
+              <label for="usuario">Nome:</label>
+              <input id="usuario" type="text" name="usuario" placeholder="Nome" required>
+          </div>
+
+
+          <label for="descricao">Descreva o atendimento: </label>
+          <textarea name="descricao" id="" placeholder="Maximo de 120 caracteres" maxlength="120"></textarea>
+          <button type="submit">Enviar</button>
+        </form>
+
+    </section>
+    
     <footer>
       <span>© 2024 FINTECH All rights reserved</span>
     </footer>
   </div>
-  
-
-
 
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
