add institutional files

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ol><a href="#">Home</a></ol>
           <ol><a href="#">About</a></ol>
           <ol><a href="#features">Features</a></ol>
-          <ol><a href="#">Contact Us</a></ol>
+          <ol><a href="#contactUs">Contact Us</a></ol>
         </li>
         <div class="buttonsHeader">
           <button>Cadastro</button>
@@ -50,7 +50,7 @@
       </button>
     </section>
 
-    <img src="./assets/ixqhfKSfJy41m88g91Uz7Pbqv5c.avif" alt="" id="imgDetails">
+    <img src="./assets/ixqhfKSfJy41m88g91Uz7Pbqv5c.avif" alt="exemplo de tela de usuario" id="imgDetails">
 
     <div class="featuresClass" id="features">
       <strong>Features</strong>
@@ -118,35 +118,41 @@
       <button>Get Started</button>
     </section>
 
-    <section class="informationSection">
+    <section class="informationSection" id="contactUs">
+      <span>Fale com a gente <ion-icon name="chatbubbles-outline"></ion-icon></span>
+      <button class="buttonsContactUs">SAC</button>
+      <button class="buttonsContactUs">Ouvidoria</button>
+      <button class="buttonsContactUs">Canais Digitais</button>
+    </section>
 
-      <div class="socialMedia">
-        <strong>Siga-nos</strong>
-        <div class="socialMediaLinks">
-          <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
-          <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
-          <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
-          <a href=""><ion-icon name="logo-github"></ion-icon></a>
-        </div>
+    <section class="informationAdd">
+      <div class="adressAndSocialMedia">
+        <img src="./assets/Logo.png" alt="logo FINTECH">
+        <p>© 2024 FINTECH CNPJ: 00.000.00/0001-00
+          Q0 Lote 0, 0º andar - Salvador/BA - CEP: 00000000
+        </p>
+        <p>Saiba Mais</p>
+        <span>
+          <ion-icon name="logo-tiktok"></ion-icon>
+          <ion-icon name="logo-youtube"></ion-icon>
+          <ion-icon name="logo-github"></ion-icon>
+          <ion-icon name="logo-linkedin"></ion-icon>
+          <ion-icon name="logo-facebook"></ion-icon>
+        </span>
       </div>
-
-        <form action="">
-          <h2>Entre em contato</h2>
-          <p>Acompanhamento ao cliente 24h</p>
-
-          <div class="inputForm">
-              <label for="email">Email: </label>
-              <input id="email" type="email" name="email" placeholder="Your email address" required>
-              <label for="usuario">Nome:</label>
-              <input id="usuario" type="text" name="usuario" placeholder="Nome" required>
-          </div>
-
-
-          <label for="descricao">Descreva o atendimento: </label>
-          <textarea name="descricao" id="" placeholder="Maximo de 120 caracteres" maxlength="120"></textarea>
-          <button type="submit">Enviar</button>
-        </form>
-
+      <div class="optionsAdd">
+        <p>Institucional</p>
+        <li>
+          <ol><a href="">Acesso aos dados Pessoais</a></ol>
+          <ol><a href="">Eventos</a></ol>
+          <ol><a href="">Imprensa</a></ol>
+          <ol><a href="">Politica de privacidade</a></ol>
+          <ol><a href="">Programas de inovação</a></ol>
+          <ol><a href="">Relação com investidores</a></ol>
+          <ol><a href="">Sobre a FINTECH</a></ol>
+          <ol><a href="">Conquistas e prêmios</a></ol>
+        </li>
+      </div>
     </section>
     
     <footer>
